@@ -55,10 +55,9 @@ static NSDictionary  *dict = nil;
       // Setting up the dictionary needed for registration!
 
       // Objective C Class
-      descr = [NSString stringWithString:
-	@"Generic Objective-C class.\n\n"
-	@"This is a plain subclass of NSObject which includes"
-	@" only Foundation.h."];
+      descr = @"Generic Objective-C class.\n\n"
+		@"This is a plain subclass of NSObject which includes"
+		@" only Foundation.h.";
       template = [bundle pathForResource:@"class" ofType:@"template"];
       classDict = [NSDictionary dictionaryWithObjectsAndKeys:
 	PCClasses, @"ProjectKey",
@@ -67,10 +66,9 @@ static NSDictionary  *dict = nil;
 	nil];
 
       // Objective C Header
-      descr = [NSString stringWithString:
-	@"Generic Objective-C header.\n\n"
-	@"This is a plain interface subclassing NSObject."
-	@" The file includes Foundation.h"];
+      descr = @"Generic Objective-C header.\n\n"
+		@"This is a plain interface subclassing NSObject."
+		@" The file includes Foundation.h";
       template = [bundle pathForResource:@"header" ofType:@"template"];
       headerDict =[NSDictionary dictionaryWithObjectsAndKeys:
         PCHeaders,@"ProjectKey",
@@ -79,9 +77,8 @@ static NSDictionary  *dict = nil;
         nil];
 
       // C File
-      descr = [NSString stringWithString:
-	@"Generic ANSI-C implementation file.\n\n"
-	@"This file contains no Objective-C dependency in any form."];
+      descr = @"Generic ANSI-C implementation file.\n\n"
+		@"This file contains no Objective-C dependency in any form.";
       template = [bundle pathForResource:@"cfile" ofType:@"template"];
       ccDict = [NSDictionary dictionaryWithObjectsAndKeys:
         PCOtherSources,@"ProjectKey",
@@ -90,9 +87,8 @@ static NSDictionary  *dict = nil;
         nil];
 
       // C Header
-      descr = [NSString stringWithString:
-	@"Generic ANSI-C header.\n\n"
-	@"This file contains no Objective-C dependency in any form."];
+      descr = @"Generic ANSI-C header.\n\n"
+		@"This file contains no Objective-C dependency in any form.";
       template = [bundle pathForResource:@"cheader" ofType:@"template"];
       chDict = [NSDictionary dictionaryWithObjectsAndKeys:
         PCHeaders,@"ProjectKey",
@@ -101,10 +97,9 @@ static NSDictionary  *dict = nil;
         nil];
 
       // Objective C Protocol
-      descr = [NSString stringWithString:
-	@"Generic Objective-C protocol.\n\n"
-	@"This is common Objective-C protocol, comparable"
-	@" i.e. to a Java interface."];
+      descr = @"Generic Objective-C protocol.\n\n"
+		@"This is common Objective-C protocol, comparable"
+		@" i.e. to a Java interface.";
       template = [bundle pathForResource:@"protocol" ofType:@"template"];
       protocolDict = [NSDictionary dictionaryWithObjectsAndKeys:
         PCHeaders,@"ProjectKey",
@@ -113,9 +108,8 @@ static NSDictionary  *dict = nil;
         nil];
 
       // GSMarkup
-      descr = [NSString stringWithString:
-	@"Generic GSMarkup File.\n\n"
-	@"This is the interface description of GNUstep Renaissance."];
+      descr = @"Generic GSMarkup File.\n\n"
+		@"This is the interface description of GNUstep Renaissance.";
       template = [bundle pathForResource:@"gsmarkup" ofType:@"template"];
       gsmarkupDict =[NSDictionary dictionaryWithObjectsAndKeys:
         PCGSMarkupFiles,@"ProjectKey",
